--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
+<!-- Font Awesome -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+  rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css"
+  rel="stylesheet"
+/>
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -35,7 +49,6 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
-<?php include 'example.php';?>
 <body>
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center">
@@ -515,13 +528,21 @@
               </div>
               <div class="form-group mt-3">
                 <label for="name">Luogo di nascita</label>
-                <select name="comuni">
-                </select>
+                <input type="text" list="comunilist" class="form-control" placeholder="Inserire un comune..." name="comuni" id="comuni">
+                <datalist id="comunilist">
+
+                </datalist>
               </div>
-              <div class="form-group mt-3">
+              <div class="form-group">
                 <label for="name">Numero di telefono</label>
-                <input type="number" class="form-control" name="phone" id="phone" required>
+                <div class="input-group input-group-lg">
+                  <div class="input-group-prepend" style="text-align: center;">
+                    <span style="height: 100%; width: 100%; padding:10px; text-align: center;" class="input-group-text" id="basic-addon1"><i class="flag flag-italy"></i></span>
+                  </div>
+                  <input id="phoneNo" type="tel" class="form-control" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" size="20" minlength="9" maxlength="14" placeholder="333-333-3333" aria-label="Numero di telefono" aria-describedby="basic-addon1" required><span id="valid" class="validity"></span>
+                </div>
               </div>
+              
               <div class="my-3">
                 <div class="loading">Caricamento</div>
                 <div class="error-message"></div>
@@ -573,7 +594,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script type="module" src="assets/js/main.js"></script>
 
 </body>
 
