--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Green Bootstrap Template - Index</title>
+  <title>AVO Mondovì</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -76,12 +76,12 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">Chi Siamo</a></li>
-          <li><a class="nav-link scrollto" href="#services">Diventa un volontario AVO</a></li>
-          <li><a class="nav-link scrollto " href="#contact">Dove siamo</a></li>
-          <li><a class="nav-link scrollto" href="#team">Contatti</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto active" href="#hero">HOME</a></li>
+          <li><a class="nav-link scrollto" href="#about">CHI SIAMO</a></li>
+          <li><a class="nav-link scrollto" href="#services">DIVENTA UN VOLONTARIO AVO</a></li>
+          <li><a class="nav-link scrollto" href="#team">CONTATTI</a></li>
+          <li><a class="nav-link scrollto " href="#contact">DOVE SIAMO</a></li>
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -97,7 +97,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -140,8 +140,8 @@
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">DOVE SIAMO</h2>
-              <p class="animate__animated animate__fadeInUp">La sede centrale di AVO Mondovì si trova in Via S. Arnolfo, 2L a poca distanza dalla Diocesi di Mondovì.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <p class="animate__animated animate__fadeInUp">La sede centrale di AVO Mondovì si trova in Piazza Ellero, 45. Inoltre, al 1° piano dell'Ospedale di Mondovì, si trova il secondo ufficio.</p>
+              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">+</a>
             </div>
           </div>
         </div>
@@ -299,8 +299,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>COSA FACCIAMO</h2>
+          <p>Obiettivo dell’AVO è “aiutare chi soffre contribuendo ad una crescente umanizzazione delle strutture ospedaliere e di ricovero”.</p>
         </div>
 
         <div class="row">
@@ -312,8 +312,8 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">La missione</a></h4>
+              <p>AVO Mondovì opera nelle strutture ospedaliere, socio-sanitarie, socio-assistenziali, territoriali ed extraterritoriali, per <b>assicurare una presenza</b> accanto ai malati offrendo loro, durante la degenza, calore umano, sostegno, dialogo, aiuto per combattere contro la sofferenza, l’isolamento, la noia.</p>
             </div>
           </div>
 
@@ -325,8 +325,8 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Progetti</a></h4>
+              <p>AVO Mondovì sviluppa e realizza <b>progetti</b>, anche con servizio domiciliare, a favore di soggetti svantaggiati, poveri, immigrati, disabili fisici e psichici.</p>
             </div>
           </div>
 
@@ -338,8 +338,8 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Solidarietà</a></h4>
+              <p>AVO Mondovì promuove la <b>cultura della solidarietà</b> nelle nuove generazioni anche costruendo un collegamento diretto e bilaterale con Scuola e Università.</p>
             </div>
           </div>
 
@@ -351,8 +351,11 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Sostenere</a></h4>
+              <p>AVO si propone di intervenire attivamente allo scopo di:<br>
+                - Contribuire ad <b>umanizzare</b> la vita in ospedale;<br>
+                - Testimoniare la <b>solidarietà della comunità</b>;<br>
+                - Offrire ai degenti <b>sostegno</b> nella solitudine e nelle difficoltà.</p>
             </div>
           </div>
 
@@ -364,8 +367,9 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">Dele Cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="">Determinazione</a></h4>
+              <p>I suoi volontari (circa 900) prestano servizio nelle strutture con <b>turni giornalieri di 3 ore</b> distribuiti su tutta la settimana.
+                Si impegnano a donare il proprio tempo con motivazione, gratuità, competenza e fedeltà, sposando appieno i valori di accoglienza, ascolto, sostegno e condivisione.</p>
             </div>
           </div>
 
@@ -377,8 +381,10 @@
                 </svg>
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Divera Don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">Volontariato</a></h4>
+              <p><b>Gratuità</b>: l’attività viene prestata gratuitamente da ogni socio, dal Presidente al Volontario che presta servizio nella corsia.  
+                <br><b>Formazione</b>: è una formazione permanente che inizia con il corso base per l’avvio al tirocinio come Volontari in corsia e continua per assicurare un adeguato supporto mirato a migliorare la qualità del servizio presso l’Ammalato.  
+                <br><b>Integrazione</b>: non è ammessa alcuna sostituzione di compiti e funzioni di competenza degli operatori Sanitari.</p>
             </div>
           </div>
 
@@ -393,11 +399,11 @@
 
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>DIVENTA UN VOLONTARIO AVO!</h3>
+            <p> Se soddisfi i requisiti, compila la form cliccando su questo pulsante e diventa un volontario AVO!</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Call To Action</a>
+            <a class="cta-btn align-middle" href="#contact">+</a>
           </div>
         </div>
 
@@ -474,9 +480,9 @@
     <section id="contact" class="contact">
       <div class="container">
 
-        <div class="section-title">
+        <div id="dove-siamo" class="section-title">
           <h2>Dove siamo</h2>
-          <p>La sede centrale di AVO Mondovì si trova in Via S. Arnolfo, 2L a poca distanza dalla Diocesi di Mondovì.</p>
+          <p>La sede centrale di AVO Mondovì si trova in Piazza Ellero, 45.</p>
         </div>
 
         <div class="row">
@@ -486,7 +492,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Via S. Arnolfo, 2L</p>
+                <p>Piazza Ellero, 45 - Ospedale di Mondovì, 1° Piano</p>
               </div>
 
               <div class="email">
@@ -501,45 +507,45 @@
                 <p>+39 334 111 2372</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2851.156073367077!2d7.820601499999997!3d44.38891779999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12d29e5107e5a089%3A0x3127e8af13c6fe58!2sVia%20Sant&#39;Arnolfo%2C%202%2C%2012084%20Mondov%C3%AC%20CN!5e0!3m2!1sit!2sit!4v1680340988596!5m2!1sit!2sit" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1a-UdFwS5dnXxR7k1aUBmXHT0yvFGwmA&ehbc=2E312F" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <div id="formAvo" class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+            <form action="mailto:ricky.marcarino@gmail.com" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Nome</label>
                   <input type="text" name="name" class="form-control" id="name" required>
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="name">Cognome</label>
+                  <label for="surname">Cognome</label>
                   <input type="text" name="surname" class="form-control" id="surname" required>
                 </div>
                 <div class="form-group col-md-6 mt-3 mt-md-0">
-                  <label for="name">Email</label>
+                  <label for="email">Email</label>
                   <input type="email" class="form-control" name="email" id="email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <label for="name">Data di nascita</label>
+                <label for="datanascita">Data di nascita</label>
                 <input type="date" class="form-control" name="datanascita" id="datanascita" required>
               </div>
               <div class="form-group mt-3">
-                <label for="name">Luogo di nascita</label>
+                <label for="comuni">Luogo di nascita</label>
                 <input type="text" list="comunilist" class="form-control" placeholder="Inserire un comune..." name="comuni" id="comuni">
                 <datalist id="comunilist">
 
                 </datalist>
               </div>
               <div class="form-group">
-                <label for="name">Numero di telefono</label>
+                <label for="phone">Numero di telefono</label>
                 <div class="input-group input-group-lg">
                   <div class="input-group-prepend" style="text-align: center;">
                     <span style="height: 100%; width: 100%; padding:10px; text-align: center;" class="input-group-text" id="basic-addon1"><i class="flag flag-italy"></i></span>
                   </div>
-                  <input id="phoneNo" type="tel" class="form-control" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" size="20" minlength="9" maxlength="14" placeholder="333-333-3333" aria-label="Numero di telefono" aria-describedby="basic-addon1" required><span id="valid" class="validity"></span>
+                  <input name="phone" id="phoneNo" type="tel" class="form-control" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" size="20" minlength="9" maxlength="14" placeholder="333-333-3333" aria-label="Numero di telefono" aria-describedby="basic-addon1" required><span id="valid" class="validity"></span>
                 </div>
               </div>
               
@@ -548,7 +554,22 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><input type="button" value="Send Message" onclick="sendMail()"></input></div>
+              <script>
+                function sendMail() {
+                  let name = document.getElementById('name').value;
+                  let surname = document.getElementById('surname').value;
+                  let email = document.getElementById('email').value;
+                  let datanascita = document.getElementById('datanascita').value;
+                  let luogonascita = document.getElementById('comuni').value;
+                  let phoneNo = document.getElementById('phoneNo').value;
+                  window.location='mailto:ricky.marcarino@gmail.com?subject=Richiesta Volontario AVO Mondovì&body=Nome: ' + name + 
+                  '%20%3A%0D%0ACognome: ' + surname +
+                  '%20%3A%0D%0AData di nascita: ' + datanascita + 
+                  '%20%3A%0D%0ALuogo di nascita: ' + luogonascita + 
+                  '%20%3A%0D%0ANumero di telefono: ' + phoneNo + '%20%3A';
+                }
+              </script>
             </form>
           </div>
 
@@ -562,24 +583,14 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Green</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <h3>AVO Mondovì</h3>
+      <p>SONO AVO PERCHÉ CREDO NEL VALORE DELLA SOLIDARIETÀ.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>Green</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/green-free-one-page-bootstrap-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -592,6 +603,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 
   <!-- Template Main JS File -->
   <script type="module" src="assets/js/main.js"></script>
