--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-hospital"></i></div>
               <h4 class="title"><a href="">Una presenza amichevole.</a></h4>
-              <p class="description">Il servizio AVO vuole assicurare una presenza amichevole, offrendo ai malati durante la loro degenza, ai loro familiari, agli ospiti delle Residenze per anziani, calore umano, ascolto,  compagnia: un aiuto per lottare contro la sofferenza della malattia e della solitudine.</p>
+              <p class="description">AVO, il servizio che offre calore umano, ascolto e compagnia ai malati durante la loro degenza, ai loro familiari e agli ospiti delle Residenze per anziani, assume l'impegno di fornire una presenza amichevole, supportando la lotta contro la sofferenza della malattia e della solitudine.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
@@ -208,7 +208,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>AVO, L'AMICO IN PIÙ CHE CONDIVIDE EMOZIONI.</h3>
             <p class="fst-italic">
-              Il volontario AVO è accanto alle fragilità, all’ammalato e all’anziano, accogliendo i loro bisogni di ascolto e compiendo tutti quei gesti che un autentico sentimento di solidarietà consente.
+              Il volontario AVO è vicino alle fragilità degli anziani e degli ammalati, accogliendo i loro bisogni di ascolto e compiendo tutti quei gesti che derivano dal sincero sentimento di solidarietà.
             </p>
             <ul>
               <li><i class="bi bi-check-circled"></i> AVO si propone di intervenire attivamente, all’interno delle strutture sanitarie, allo scopo di:</li>
@@ -217,7 +217,7 @@
               <li><i class="bi bi-check-circled"></i> * Offrire ai degenti sostegno nella solitudine e nelle difficoltà.</li>
             </ul>
             <p>
-              AVO, Associazione Volontari Ospedalieri, rappresenta una delle più importanti e riconosciute realtà nel settore del volontariato socio-sanitario: può fare parte di questa associazione chiunque abbia il desiderio di mettere al servizio degli ammalati degenti negli ospedali parte del proprio tempo.
+              L'AVO, ovvero l'Associazione Volontari Ospedalieri, è una delle realtà più importanti e autorevoli nell'ambito del volontariato socio-sanitario. Chiunque voglia dedicare parte del proprio tempo agli ammalati degenti negli ospedali può diventare parte di questa associazione.
             </p>
           </div>
         </div>
@@ -423,8 +423,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/team-1.jpg" alt="">
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
+              <h4>Giuseppe Bertone</h4>
+              <span>Presidente</span>
               <p>
                 Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
               </p>
@@ -440,11 +440,8 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/team/team-2.jpg" alt="">
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
-              <p>
-                Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
-              </p>
+              <h4>Carla Allemandi</h4>
+              <span>Vice Presidente</span>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
@@ -513,7 +510,7 @@
           </div>
 
           <div id="formAvo" class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="mailto:ricky.marcarino@gmail.com" method="post" role="form" class="php-email-form">
+            <form action="./forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Nome</label>
@@ -554,7 +551,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><input type="button" value="Send Message" onclick="sendMail()"></input></div>
+              <div class="text-center"><button type="submit" onclick="sendMail()">Send Message</button></div>
               <script>
                 function sendMail() {
                   let name = document.getElementById('name').value;
