--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>AVO Mondovì</title>
-  <meta name="DC.title" content="AVO Mondovì - Eventi">
+  <meta name="DC.title" content="AVO Mondovì">
   <meta content="Sito ufficiale dell'Associazione Volontari Ospedalieri (AVO) di Mondovì (CN). Diventa anche tu un volontario!" name="description">
   <meta content="avo, avo mondovì, avo mondovi, associazione volontari ospedalieri, volontariato avo, avo associazione, regolamento avo, associazione avo napoli, come diventare volontario avo, avo vicenza, avo definizione, avo cuneo, avo alessandria" name="keywords">
 
@@ -564,7 +564,7 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="container">
+    <div class="container"  style="display: block;">
       <h3>AVO Mondovì</h3>
       <p>SONO AVO PERCHÉ CREDO NEL VALORE DELLA SOLIDARIETÀ.</p>
       <div class="social-links">
@@ -586,7 +586,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="https://smtpjs.com/v3/smtp.js"></script>
-
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <!-- Template Main JS File -->
   <script type="module" src="assets/js/main.js"></script>
 
