--- a/inner-page.html
+++ b/inner-page.html
@@ -6,14 +6,13 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>AVO Mondovì - Eventi</title>
-  <meta name="robots" content="noindex">
   <meta name="DC.title" content="AVO Mondovì - Eventi">
-  <meta content="" name="description">
+  <meta content="Sito ufficiale dell'Associazione Volontari Ospedalieri (AVO) di Mondovì (CN). Diventa anche tu un volontario!" name="description">
   <meta content="avo, avo mondovì, avo mondovi, associazione volontari ospedalieri, volontariato avo, avo associazione, regolamento avo, associazione avo napoli, come diventare volontario avo, avo vicenza, avo definizione, avo cuneo, avo alessandria" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -25,9 +24,29 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
+<!-- Font Awesome -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+  rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.3.0/mdb.min.css"
+  rel="stylesheet"
+/>
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="./src/tipso.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+<script src="./src/tipso.js"></script>
 
   <!-- =======================================================
   * Template Name: Green
@@ -64,11 +83,11 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="#hero">HOME</a></li>
-          <li><a class="nav-link scrollto" href="#about">CHI SIAMO</a></li>
-          <li><a class="nav-link scrollto" href="#services">DIVENTA UN VOLONTARIO AVO</a></li>
-          <li><a class="nav-link scrollto" href="#team">CONTATTI</a></li>
-          <li><a class="nav-link scrollto" href="#contact">DOVE SIAMO</a></li>
+          <li><a class="nav-link scrollto" href="./index.html">HOME</a></li>
+          <li><a class="nav-link scrollto" href="./index.html#about">CHI SIAMO</a></li>
+          <li><a class="nav-link scrollto" href="./index.html#services">DIVENTA UN VOLONTARIO AVO</a></li>
+          <li><a class="nav-link scrollto" href="./index.html#team">CONTATTI</a></li>
+          <li><a class="nav-link scrollto" href="./index.html#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link active" href="./inner-page.html">I NOSTRI EVENTI</a></li>
 
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -101,9 +120,9 @@
     <section class="breadcrumbs">
       <div class="container">
 
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>I nostri eventi</h2>
-          <ol>
+        <div class="justify-content-between align-items-center" style="text-align: center;">
+          <h1>I nostri eventi</h1>
+          <ol style="text-align: center;">
             <li><a href="index.html">Home</a></li>
             <li>Eventi</li>
           </ol>
@@ -112,8 +131,8 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <section class="inner-page">
-      <div class="container">
+    <section class="inner-page" style="display: flex;">
+      <div class="cardContainer animate__animated animate__bounce hasTooltip tipso prefers-reduced-motion">
         <div class="item-container" onclick="window.dialog.showModal();">
           <div class="img-container">
               <img src="./assets/img/avo.mondovi/avo.mondovi-07062023-0004.webp" alt="Event image">
@@ -141,7 +160,7 @@
               </div>
           </div>
       </div>
-      <dialog id="dialog">
+      <dialog id="dialog" class="animate__animated animate__fadeInLeft animate__fadeInLeft">
         <h2><b>Incontro AVO</b></h2>
         <p class="info" style="text-align: center;">
           <i class="far fa-calendar-alt"></i>
@@ -168,15 +187,45 @@
         <button onclick="window.dialog.close();" aria-label="close" class="x">❌</button>
       </dialog>
       </div>
+      <div class="cardContainer animate__animated animate__bounce">
+        <div class="item-container concluso">
+          <div class="img-container">
+              <img src="./assets/img/avo.mondovi/photo_2023-06-08_22-07-49.jpg" alt="Event image">
+          </div>
+
+          <div class="body-container">
+              <div class="overlay"></div>
+
+              <div class="event-info">
+                  <p class="title" style="text-align: center;">IL SALONE DEL VOLONTARIATO</p>
+                  <div class="separator"></div>
+                  <p class="info" style="text-align: center;">Mondovì, via Sant'Agostino</p>
+                  <p class="price">Già concluso</p>
+
+                  <div class="additional-info">
+                      <p class="info">
+                          <i class="far fa-calendar-alt"></i>
+                          6 giugno 2023
+                          <br>
+                          dalle 9 alle 14
+                      </p>
+
+                      <p class="info description">
+                        Incontro tra scuola e volontari dell'Associazione Volontari Ospedalieri di Mondovì
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </div>
     </section>
 
   </main><!-- End #main -->
 
   <footer id="footer">
-    <div class="container">
-      <h3>AVO Mondovì</h3>
-      <p>SONO AVO PERCHÉ CREDO NEL VALORE DELLA SOLIDARIETÀ.</p>
-      <div class="social-links">
+    <div class="container" style="display: block;">
+      <h3 class="footerElems">AVO Mondovì</h3>
+      <p class="footerElems">SONO AVO PERCHÉ CREDO NEL VALORE DELLA SOLIDARIETÀ.</p>
+      <div class="social-links footerElems">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -194,9 +243,10 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script type="module" src="assets/js/main.js"></script>
 
 </body>
 
