--- a/index.html
+++ b/index.html
@@ -204,15 +204,15 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2">
-            <video
+          <video
                 id="my-player"
                 class="video-js"
                 controls
                 preload="auto"
                 poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg"
                 data-setup='{}'
-                width="600em">
+                width="50%"
+                height="300em">
               <source src="./assets/videos/presentazione.mp4" type="video/mp4"></source>
               <!--<source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>-->
               <!--<source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source>-->
@@ -224,7 +224,6 @@
                 </a>
               </p>
             </video>
-          </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>AVO, L'AMICO IN PIÙ CHE CONDIVIDE EMOZIONI.</h3>
             <p class="fst-italic">
