--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="//vjs.zencdn.net/8.3.0/video-js.min.css" rel="stylesheet">
-<!-- Font Awesome -->
+  <!-- Font Awesome -->
 <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
   rel="stylesheet"
@@ -83,6 +83,7 @@
           <li><a class="nav-link scrollto" href="#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto " href="#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link" href="./inner-page.html">I NOSTRI EVENTI</a></li>
+          <li><a class="nav-link" href="./pensieri.html">PENSIERI</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -116,10 +117,10 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg)">
+        <div class="carousel-item active" style="background-image: url(assets/img/slide/carosello.jpg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown"><span>AVO MONDOVI ODV</span> - Associazione Volontari Ospedalieri Mondovì</h2>
+              <h2 class="animate__animated animate__fadeInDown"><span>AVO MONDOVI ODV ETS</span> - Associazione Volontari Ospedalieri Mondovì</h2>
               <p class="animate__animated animate__fadeInUp">Obiettivo dell’AVO è “aiutare chi soffre contribuendo ad una crescente umanizzazione delle strutture ospedaliere e di ricovero”.</p>
               <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">+</a>
             </div>
@@ -127,7 +128,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg)">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/carosello-1.jpg); background-size:cover;">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">DIVENTARE VOLONTARI AVO</h2>
@@ -170,23 +171,23 @@
         <div class="row no-gutters">
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-hospital"></i></div>
-              <h4 class="title"><a href="">Una presenza amichevole.</a></h4>
-              <p class="description">AVO, il servizio che offre calore umano, ascolto e compagnia ai malati durante la loro degenza, ai loro familiari e agli ospiti delle Residenze per anziani, assume l'impegno di fornire una presenza amichevole, supportando la lotta contro la sofferenza della malattia e della solitudine.</p>
+              <div class="icon" style="text-align: center;"><i class="bi bi-hospital"></i></div>
+              <h4 class="title" style="text-align: center;"><a href="">Una presenza amichevole</a></h4>
+              <p class="description" style="text-align: justify;">AVO, il servizio che offre calore umano, ascolto e compagnia ai malati durante la loro degenza, ai loro familiari e agli ospiti delle Residenze per anziani, assume l'impegno di fornire una presenza amichevole, supportando la lotta contro la sofferenza della malattia e della solitudine.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="">Diventa anche tu volontario AVO!</a></h4>
-              <p class="description">Il volontariato è una esperienza di valori e condivisione, una opportunità di crescita personale che sviluppa il tuo potenziale, rafforza le tue competenze e capacità di ascolto.</p>
+              <div class="icon" style="text-align: center;"><i class="bi bi-briefcase"></i></div>
+              <h4 class="title" style="text-align: center;"><a href="">Diventa anche tu volontario AVO!</a></h4>
+              <p class="description" style="text-align: justify;">Il volontariato è una esperienza di valori e condivisione, una opportunità di crescita personale che sviluppa il tuo potenziale, rafforza le tue competenze e capacità di ascolto.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-person-heart"></i></div>
-              <h4 class="title"><a href="">La nostra missione</a></h4>
-              <p class="description">AVO Mondovì sviluppa e realizza progetti, anche con servizio domiciliare, a favore di soggetti fragili, svantaggiati, soli portando conforto là dove è più necessario.</p>
+              <div class="icon" style="text-align: center;"><i class="bi bi-person-heart"></i></div>
+              <h4 class="title" style="text-align: center;"><a href="">La nostra missione</a></h4>
+              <p class="description" style="text-align: justify;">AVO Mondovì sviluppa e realizza progetti, anche con servizio domiciliare, a favore di soggetti fragili, svantaggiati, soli portando conforto là dove è più necessario.</p>
             </div>
           </div>
         </div>
@@ -203,8 +204,8 @@
           <p>L’AVO, Associazione Volontari Ospedalieri,  si impegna a svolgere assistenza sociale e socio-sanitaria nelle strutture ospedaliere e socio assistenziali a livello nazionale, con lo scopo di assicurare una presenza amichevole accanto ai malati offrendo loro, durante la degenza, calore umano, dialogo e aiuto per lottare contro la sofferenza, l’isolamento e la noia.</p>
         </div>
 
-        <div class="row">
-          <video
+        <div class="row" style="display: flex;">
+         <!-- <video
                 id="my-player"
                 class="video-js"
                 controls
@@ -214,8 +215,6 @@
                 width="50%"
                 height="300em">
               <source src="./assets/videos/presentazione.mp4" type="video/mp4"></source>
-              <!--<source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm"></source>-->
-              <!--<source src="//vjs.zencdn.net/v/oceans.ogv" type="video/ogg"></source>-->
               <p class="vjs-no-js">
                 To view this video please enable JavaScript, and consider upgrading to a
                 web browser that
@@ -223,10 +222,11 @@
                   supports HTML5 video
                 </a>
               </p>
-            </video>
+            </video>-->
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+            <br>
             <h3>AVO, L'AMICO IN PIÙ CHE CONDIVIDE EMOZIONI.</h3>
-            <p class="fst-italic">
+            <p class="fst-italic" style="text-align: justify;">
               Il volontario AVO è vicino alle fragilità degli anziani e degli ammalati, accogliendo i loro bisogni di ascolto e compiendo tutti quei gesti che derivano dal sincero sentimento di solidarietà.
             </p>
             <ul>
@@ -235,9 +235,15 @@
               <li><i class="bi bi-check-circled"></i> * Testimoniare la solidarietà della comunità;</li>
               <li><i class="bi bi-check-circled"></i> * Offrire ai degenti sostegno nella solitudine e nelle difficoltà.</li>
             </ul>
-            <p>
+            <p  style="text-align: justify;">
               L'AVO, ovvero l'Associazione Volontari Ospedalieri, è una delle realtà più importanti e autorevoli nell'ambito del volontariato socio-sanitario. Chiunque voglia dedicare parte del proprio tempo agli ammalati degenti negli ospedali può diventare parte di questa associazione.
             </p>
+          </div>
+          
+          <div style="width: 40%; margin:0 auto; vertical-align: middle;">
+            <video style="width: 100%;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg">
+              <source src="./assets/videos/presentazione.mp4" type="video/mp4" />
+            </video>
           </div>
         </div>
 
@@ -249,44 +255,44 @@
       <div class="container">
         <div class="section-title">
           <h2>Requisiti per diventare un volontario AVO</h2>
-          <p>L’ A.V.O. organizza corsi di preparazione per diventare volontari ogni anno. Le iscrizioni vengono aperte circa due mesi prima dall’inizio di ciascun corso.</p>
+          <p style="text-align: justify;">L’ A.V.O. organizza corsi di preparazione per diventare volontari ogni anno. Le iscrizioni vengono aperte circa due mesi prima dall’inizio di ciascun corso.</p>
         </div>
         <div class="row no-gutters">
 
           <div class="col-lg-4 col-md-6 content-item">
             <span>01</span>
             <h4>Età</h4>
-            <p>Per diventare volontario AVO bisogna avere un'età compresa tra i 18 e i 70 anni.</p>
+            <p style="text-align: justify;">Per diventare volontario AVO bisogna avere un'età compresa tra i 18 e i 70 anni.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
             <span>02</span>
             <h4>Condizioni fisiche e mentali</h4>
-            <p>Un volontario AVO deve avere delle buone condizioni psicofisiche.</p>
+            <p style="text-align: justify;">Un volontario AVO deve avere delle buone condizioni psicofisiche.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
             <span>03</span>
             <h4>Empatia</h4>
-            <p>La capacità umana di mettersi al posto degli altri per comprenderli meglio.</p>
+            <p style="text-align: justify;">La capacità umana di mettersi al posto degli altri per comprenderli meglio.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
             <span>04</span>
             <h4>Preparazione</h4>
-            <p>L'AVO richiede una buona preparazione generale per diventare un volontario.</p>
+            <p style="text-align: justify;">L'AVO richiede una buona preparazione generale per diventare un volontario.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
             <span>05</span>
             <h4>Disponibilità</h4>
-            <p>È richiesta la disponibilità a svolgere almeno un turno settimanale in ospedale (mattino o pomeriggio) e a partecipare agli incontri di formazione permanente.</p>
+            <p style="text-align: justify;">È richiesta la disponibilità a svolgere almeno un turno settimanale in ospedale (mattino o pomeriggio) e a partecipare agli incontri di formazione permanente.</p>
           </div>
 
           <div class="col-lg-4 col-md-6 content-item">
             <span>06</span>
             <h4>Creatività</h4>
-            <p>Mettere in comune esperienze, soddisfazioni, fallimenti, proposte, stimola e incoraggia lo spirito del volontario a partecipare attivamente all'Associazione.</p>
+            <p style="text-align: justify;">Mettere in comune esperienze, soddisfazioni, fallimenti, proposte, stimola e incoraggia lo spirito del volontario a partecipare attivamente all'Associazione.</p>
           </div>
 
         </div>
@@ -444,52 +450,25 @@
           <p style="font-style: italic;">"L'opera umana più bella è di essere utile al prossimo."<br> - Sofocle</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="row" style="">
+          <div class="col-lg-4 col-md-6 d-flex mx-auto align-items-stretch">
             <div class="member">
               <img src="assets/img/team/team-1.jpg" alt="">
               <h4>Giuseppe Bertone</h4>
               <span>Presidente</span>
               <p>
-                Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                Quando soffia il vento del cambiamento, alcuni costruiscono muri, altri mulini a vento.
               </p>
-              <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-6 d-flex mx-auto align-items-stretch">
             <div class="member">
               <img src="assets/img/team/team-2.jpg" alt="">
               <h4>Carla Allemandi</h4>
               <span>Vice Presidente</span>
-              <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="assets/img/team/team-3.jpg" alt="">
-              <h4>William Anderson</h4>
-              <span>CTO</span>
               <p>
-                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                Nessun gesto è potente come una mano tesa.
               </p>
-              <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
             </div>
           </div>
 
@@ -613,7 +592,6 @@
   <!-- Template Main JS File -->
   <script type="module" src="assets/js/main.js"></script>
   <script src="//vjs.zencdn.net/8.3.0/video.min.js"></script>
-
 </body>
 
 </html>
