--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <li><a class="nav-link scrollto" href="#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto " href="#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link" href="./inner-page.html">I NOSTRI EVENTI</a></li>
-          <li><a class="nav-link" href="./pensieri.html">PENSIERI</a></li>
+          <li><a class="nav-link" href="./pensieri.html" style="padding-right: 30px;">PENSIERI</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
