--- a/pensieri.html
+++ b/pensieri.html
@@ -83,7 +83,7 @@
           <li><a class="nav-link scrollto" href="./index.html#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto " href="./index.html#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link" href="./inner-page.html">I NOSTRI EVENTI</a></li>
-          <li><a class="nav-link" href="./pensieri.html">PENSIERI</a></li><!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link" style="padding-right: 30px;" href="./pensieri.html">PENSIERI</a></li><!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -100,6 +100,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
+          <li></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -127,16 +128,16 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
-<div class="row">
-  
-  <div style="width: 60%; margin:0 auto; vertical-align: middle;">
-    <video style="width: 100%;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg">
-      <source src="./assets/videos/pensieri.mp4" type="video/mp4" />
-    </video>
-  </div>
-</div>
-<br>
-        <div class="row gy-4" style="width: 100%;">
+      <div class="row">
+        
+        <div style="width: 60%; margin:0 auto; vertical-align: middle;">
+          <video style="width: 100%;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg">
+            <source src="./assets/videos/pensieri.mp4" type="video/mp4" />
+          </video>
+        </div>
+      </div>
+      <br>
+      <div class="row gy-4" style="width: 100%;">
           <div class="col-lg-4" style="display: table; width: 100%;">
             <div class="portfolio-info" style="text-align: justify; display: cell;">
               <h3 style="text-align: center;">Per me l'AVO è...</h3>
